# Workshop-C-multithreading-multiprocess

./: .gitignore  README.md  workshop.txt
multiprocess/: CMakeLists.txt  cascade_stop.c  create.c  mp_instructions.txt  named_pipe.c  posix_shared_memory.c  simple_stop.c
multithreading/: CMakeLists.txt  attribute.c  base.c  deadlock.c  detach.c  mt_instructions.txt  mutex.c  quit.c
